--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div>
             <a href="https://www.linkedin.com/in/gabriel-portier-210873332/" target="_blank"><img src="images/linkedin-2935407_1280.png" alt="à remplir"></a>
-            <a href="https://github.com/pixzr" target="_blank" id="github"><img src="images/github-mark-white.png" alt="à remplir"></a>
+            <a href="https://github.com/pixzrr" target="_blank" id="github"><img src="images/github-mark-white.png" alt="à remplir"></a>
             <a href="mailto:gabriel.portier94@gmail.com"><img src="images/letter-2935365_1280.png" alt="à remplir"></a>
         </div>
     </header>
